# tiny_md

./: .gitignore  Makefile  README.md  atom.sh  clear_log.sh  core.c  core.cu  core.h  forces.cu  forces.h  meson.build  metrica  nvcc.sh  parameters.h  referencia_salida  roofline.sh  roofline_10_16.html  roofline_atom.sh  run.sh  stats_iniciales  stats_lab1  tiny_md.c  transfer.sh  transfer_all.sh  viz.c  wtime.c  wtime.h
benchmarks/atom/: banwidth.txt  timeDGEMM.txt  timeSGEMM.txt
lab2/: forces0.c  forces1.c
